favicon added, dashboard alignment fixed

--- a/app/components/dashboardcomponent/css/dashboardcomponent.scss
+++ b/app/components/dashboardcomponent/css/dashboardcomponent.scss
@@ -25,20 +25,25 @@
         .card-header{
           border-radius: 3px 3px 0 0;
           margin: 0;
+          display: block;
         }
-        table.table th{
-          font-family: 'brandon_grotesque_regularRg';
-          text-transform: capitalize;
-          font-size: 17px;
-          font-weight: 300;
-          border-bottom-width: 1px;
+        .card-content{
+          margin-top: 0;
+          table.table th{
+            font-family: 'brandon_grotesque_regularRg';
+            text-transform: capitalize;
+            font-size: 17px;
+            font-weight: 300;
+            border-bottom-width: 1px;
+          }
         }
       }
     .card-header {
+        display: inline-block;
         text-align: center;
         color: $white;
         margin: -20px 15px 0;
-        padding: 9px 15px;
+        padding: 5px 20px;
         background-color: #999999;
         border-radius: 3px;
         box-shadow: 0 10px 30px -12px rgba(0, 0, 0, 0.42), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
@@ -50,6 +55,7 @@
         }
     }
     .card-content{
+        margin-top: -50px;
         padding: 5px 20px 15px;
         font-family: 'brandon_grotesque_regularRg';
         text-transform: uppercase;
